--- a/src/fragments/Body/Body.module.css
+++ b/src/fragments/Body/Body.module.css
@@ -3,6 +3,7 @@
   height: fit-content;
   background-color: #04132e;
   padding: 0 0 50px 0;
+  padding-top: 100px;
 }
 
 .container {
@@ -10,6 +11,14 @@
   padding: 96px 22px 0;
   width: 1276px;
   height: fit-content;
+}
+
+#projects {
+  color: white;
+  font-family: 'Geologica', sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 50px;
 }
 
 .flex {
