--- a/src/fragments/Topbar/Topbar.module.css
+++ b/src/fragments/Topbar/Topbar.module.css
@@ -10,6 +10,9 @@
   max-width: 100vw;
   height: 72px;
   padding: 15px 0;
+  position: sticky;
+  top: 0;
+  z-index: 100px;
 }
 
 .container div {
