--- a/src/fragments/Portrait/Portrait.module.css
+++ b/src/fragments/Portrait/Portrait.module.css
@@ -12,7 +12,7 @@
   background-size: 100%; */
   /* background-position: 0 0; */
   padding: 0 0 50px;
-  background-color: #006caa;
+  background-color: #023e8a;
 }
 
 .flex {
@@ -79,7 +79,6 @@
 .header p {
   font-family: 'Nunito Sans', sans-serif;
   text-align: center;
-  color: #00000094;
   color: rgba(255, 255, 255, 0.829);
   font-size: large;
   background-color: rgba(0, 0, 0, 0.342);
@@ -89,9 +88,21 @@
   /* margin-bottom: 150px; */
 }
 
+.header p p {
+  font-family: 'Nunito Sans', sans-serif;
+  color: rgba(255, 255, 255, 0.829);
+  text-align: center;
+  font-size: x-large;
+  background-color: rgb(0, 0, 0, 0);
+  border-radius: 20px;
+  padding: 30px;
+  /* padding-top: 200px; */
+  /* margin-bottom: 150px; */
+}
+
 .header p h1 {
   font-family: 'JetBrains Mono', monospace;
-  font-size: xx-large;
+  font-size: 50px;
   text-align: center;
   color: #00000094;
   color: rgba(255, 255, 255, 0.829);
